Projeto cifra de cesar

--- a/projeto_cifra_de_cesar.ipynb
+++ b/projeto_cifra_de_cesar.ipynb
@@ -100,69 +100,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Chave secreta: maturidade\n",
-      "\n",
-      "        Escolha uma opção:\n",
-      "        1. Criptografar uma mensagem\n",
-      "        2. Descriptografar uma mensagem\n",
-      "        3. Sair\n",
-      "        \n",
-      "Mensagem cifrada: CDE\n",
-      "\n",
-      "        Escolha uma opção:\n",
-      "        1. Criptografar uma mensagem\n",
-      "        2. Descriptografar uma mensagem\n",
-      "        3. Sair\n",
-      "        \n",
-      "Mensagem cifrada: CDE\n",
-      "\n",
-      "        Escolha uma opção:\n",
-      "        1. Criptografar uma mensagem\n",
-      "        2. Descriptografar uma mensagem\n",
-      "        3. Sair\n",
-      "        \n",
-      "Mensagem decifrada: abc\n",
-      "\n",
-      "        Escolha uma opção:\n",
-      "        1. Criptografar uma mensagem\n",
-      "        2. Descriptografar uma mensagem\n",
-      "        3. Sair\n",
-      "        \n",
-      "Mensagem cifrada: KHQQF\n",
-      "\n",
-      "        Escolha uma opção:\n",
-      "        1. Criptografar uma mensagem\n",
-      "        2. Descriptografar uma mensagem\n",
-      "        3. Sair\n",
-      "        \n",
-      "Mensagem cifrada: %@{{9\n",
-      "\n",
-      "        Escolha uma opção:\n",
-      "        1. Criptografar uma mensagem\n",
-      "        2. Descriptografar uma mensagem\n",
-      "        3. Sair\n",
-      "        \n",
-      "Mensagem decifrada: ifood\n",
-      "\n",
-      "        Escolha uma opção:\n",
-      "        1. Criptografar uma mensagem\n",
-      "        2. Descriptografar uma mensagem\n",
-      "        3. Sair\n",
-      "        \n",
-      "Mensagem decifrada: UVW\n",
-      "\n",
-      "        Escolha uma opção:\n",
-      "        1. Criptografar uma mensagem\n",
-      "        2. Descriptografar uma mensagem\n",
-      "        3. Sair\n",
-      "        \n",
+      "Escolha uma opção:\n",
+      "1. Criptografar uma mensagem\n",
+      "2. Descriptografar uma mensagem\n",
+      "3. Criptografar manualmente\n",
+      "4. Descriptografar manualmente\n",
+      "5. Sair\n",
       "Programa encerrado!\n"
      ]
     }
@@ -263,7 +213,7 @@
     "            print(\"Opção inválida. Por favor, escolha uma opção válida.\")\n",
     "\n",
     "# Inicia a execução do programa chamando a função main\n",
-    "main()"
+    "main()\n"
    ]
   },
   {
