Projeto cifra de cesar

--- a/projeto_cifra_de_cesar.ipynb
+++ b/projeto_cifra_de_cesar.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Cifra de César com Scrapping\n",
     "\n",
-    "Autores: Igor Cruz, Jadeson Bruno, Kelly Murta, Luiz Popoff e Rafael Vinicius\n",
+    "Autores: Igor Cruz, Jadeson Bruno, Kelly Oliveira, Luiz Popoff e Rafael Vinicius\n",
     "\n",
     "Módulo: Lógica de Programação I\n",
     "\n",
