Projeto cifra de cesar

--- a/projeto_cifra_de_cesar.ipynb
+++ b/projeto_cifra_de_cesar.ipynb
@@ -100,13 +100,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Escolha uma opção:\n",
+      "1. Criptografar uma mensagem\n",
+      "2. Descriptografar uma mensagem\n",
+      "3. Criptografar manualmente\n",
+      "4. Descriptografar manualmente\n",
+      "5. Sair\n",
+      "\u001b[1m Mensagem cifrada: ijk \u001b[0m \n",
+      "\n",
+      "\u001b[1m A chave utilizada para encriptar foi: espectro \u001b[0m \n",
+      "\n",
+      "Escolha uma opção:\n",
+      "1. Criptografar uma mensagem\n",
+      "2. Descriptografar uma mensagem\n",
+      "3. Criptografar manualmente\n",
+      "4. Descriptografar manualmente\n",
+      "5. Sair\n",
+      "\u001b[1m Mensagem decifrada: ijk \u001b[0m \n",
+      "\n",
+      "\u001b[1m A chave utilizada para descriptografar foi: espectro \u001b[0m \n",
+      "\n",
       "Escolha uma opção:\n",
       "1. Criptografar uma mensagem\n",
       "2. Descriptografar uma mensagem\n",
@@ -175,37 +195,40 @@
     "    while True:\n",
     "        opt= '''Escolha uma opção:\\n1. Criptografar uma mensagem\\n2. Descriptografar uma mensagem\\n3. Criptografar manualmente\\n4. Descriptografar manualmente\\n5. Sair'''\n",
     "        print(opt)\n",
-    "\n",
-    "        opcao = input(opt)\n",
+    "        opcao = int(input(opt))\n",
     "        \n",
-    "        if opcao == '1':\n",
+    "        if opcao == 1:\n",
     "            mensagem = input(\"Insira a mensagem a ser criptografada: \")\n",
     "            mensagem_cifrada = cifra_cesar(mensagem, chave, ENCRYPT, alfabeto)\n",
     "            print(f\"\\033[1m Mensagem cifrada: {mensagem_cifrada} \\033[0m \\n\")\n",
     "            print(f\"\\033[1m A chave utilizada para encriptar foi: {chave} \\033[0m \\n\")\n",
     "            \n",
-    "        elif opcao == '2':\n",
+    "\n",
+    "        elif opcao == 2:\n",
     "            mensagem_cifrada = input(\"Insira a mensagem a ser descriptografada: \")\n",
     "            mensagem_decifrada = cifra_cesar(mensagem_cifrada, chave, DECRYPT, alfabeto)\n",
-    "            print(f\"\\033[1m Mensagem decifrada: {mensagem_cifrada} \\033[0m \\n\")\n",
+    "            print(f\"\\033[1m Mensagem decifrada: {mensagem_decifrada} \\033[0m \\n\")\n",
     "            print(f\"\\033[1m A chave utilizada para descriptografar foi: {chave} \\033[0m \\n\")\n",
+    "            \n",
     "\n",
     "\n",
-    "        elif opcao == '3':\n",
+    "        elif opcao == 3:\n",
     "            chave_manual = input('insira a CHAVE para encriptografar: ')\n",
     "            mensagem = input(\"Insira a MENSAGEM a ser criptografada: \")\n",
     "            mensagem_cifrada = cifra_cesar(mensagem, chave_manual, ENCRYPT, alfabeto)\n",
     "            print(f\"\\033[1m Mensagem cifrada: {mensagem_cifrada} \\033[0m \\n\")\n",
     "            print(f\"\\033[1m A chave utilizada para encriptar foi: {chave_manual} \\033[0m \\n\")\n",
+    "            \n",
     "\n",
-    "        elif opcao == '4':\n",
+    "        elif opcao == 4:\n",
     "            chave_manual = input('Insira a CHAVE a ser descriptografada: ')\n",
     "            mensagem_cifrada = input(\"Insira a MENSAGEM a ser descriptografada: \")\n",
     "            mensagem_decifrada = cifra_cesar(mensagem_cifrada, chave_manual, DECRYPT, alfabeto)\n",
     "            print(f\"\\033[1m Mensagem decifrada: {mensagem_decifrada} \\033[0m \\n\")\n",
     "            print(f\"\\033[1m A chave utilizada para descriptografar foi: {chave_manual} \\033[0m \\n\")\n",
+    "            \n",
     "\n",
-    "        elif opcao == '5':\n",
+    "        elif opcao == 5:\n",
     "            print(\"Programa encerrado!\")\n",
     "            break\n",
     "\n",
