Projeto cifra de cesar

--- a/projeto_cifra_de_cesar.ipynb
+++ b/projeto_cifra_de_cesar.ipynb
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -113,9 +113,9 @@
       "3. Criptografar manualmente\n",
       "4. Descriptografar manualmente\n",
       "5. Sair\n",
-      "\u001b[1m Mensagem cifrada: ijk \u001b[0m \n",
+      "\u001b[1m Mensagem cifrada: É6Z2Ê3 \u001b[0m \n",
       "\n",
-      "\u001b[1m A chave utilizada para encriptar foi: espectro \u001b[0m \n",
+      "\u001b[1m A chave utilizada para encriptar foi: barretina \u001b[0m \n",
       "\n",
       "Escolha uma opção:\n",
       "1. Criptografar uma mensagem\n",
@@ -123,9 +123,29 @@
       "3. Criptografar manualmente\n",
       "4. Descriptografar manualmente\n",
       "5. Sair\n",
-      "\u001b[1m Mensagem decifrada: ijk \u001b[0m \n",
+      "\u001b[1m Mensagem decifrada: frango \u001b[0m \n",
       "\n",
-      "\u001b[1m A chave utilizada para descriptografar foi: espectro \u001b[0m \n",
+      "\u001b[1m A chave utilizada para descriptografar foi: barretina \u001b[0m \n",
+      "\n",
+      "Escolha uma opção:\n",
+      "1. Criptografar uma mensagem\n",
+      "2. Descriptografar uma mensagem\n",
+      "3. Criptografar manualmente\n",
+      "4. Descriptografar manualmente\n",
+      "5. Sair\n",
+      "\u001b[1m Mensagem cifrada: É6Z2Ê3 \u001b[0m \n",
+      "\n",
+      "\u001b[1m A chave utilizada para encriptar foi: barretina \u001b[0m \n",
+      "\n",
+      "Escolha uma opção:\n",
+      "1. Criptografar uma mensagem\n",
+      "2. Descriptografar uma mensagem\n",
+      "3. Criptografar manualmente\n",
+      "4. Descriptografar manualmente\n",
+      "5. Sair\n",
+      "\u001b[1m Mensagem decifrada: frango \u001b[0m \n",
+      "\n",
+      "\u001b[1m A chave utilizada para descriptografar foi: barretina \u001b[0m \n",
       "\n",
       "Escolha uma opção:\n",
       "1. Criptografar uma mensagem\n",
@@ -187,7 +207,7 @@
     "\n",
     "# Carrega a palavra secreta e define o alfabeto\n",
     "chave = carrega_palavra_secreta()\n",
-    "alfabeto = 'abcdefghijklmnopqrstuvwxyzàáãâéêóôõíúçABCDEFGHIJKLMNOPQRSTUVWXYZÀÁÃÂÉÊÓÕÍÚÇ123456789!@#$%^&*(){}[]-'\n",
+    "alfabeto = 'abcdefghijklmnopqrstuvwxyzàáãâéêóôõíúçÀÁÃÂÉÊÓÕÍÚÇABCDEFGHIJKLMNOPQRSTUVWXYZÀÁÃÂÉÊÓÕÍÚÇ0123456789!@#$%^&*(){}[]-_=+|\\/:;<>.,?`~ '\n",
     "\n",
     "# Função principal que gerencia a interação com o usuário\n",
     "def main():\n",
